--- a/layout/default/css/form.less
+++ b/layout/default/css/form.less
@@ -9,6 +9,7 @@
   overflow: hidden;
   padding-left: 10px;
   padding-right: 10px;
+  text-align: left;
   transition: border-color .1s;
   width: 100%;
 }
