Add max-height for textareas

--- a/layout/default/css/form.less
+++ b/layout/default/css/form.less
@@ -17,6 +17,7 @@
 .textarea.textinput {
   height: auto;
   min-height: @heightInputText;
+  max-height: @maxHeightInputTextarea;
   padding-top: (@heightInputText - @fontSize*@fontLineHeight) / 2;
   padding-bottom: (@heightInputText - @fontSize*@fontLineHeight) / 2;
   overflow: auto;
