Fix placeholder appearance

--- a/layout/default/FormField/Textarea/default.less
+++ b/layout/default/FormField/Textarea/default.less
@@ -1,8 +1,5 @@
 [placeholder]:empty:before {
-  content: attr(placeholder);
   color: @colorInputPlaceholder;
-}
-
-[placeholder]:empty:focus:before {
-  content: "";
+  content: attr(placeholder);
+  cursor: text;
 }
