Introduce dedicated colorFaviconBg less variable

--- a/layout/default/variables.less
+++ b/layout/default/variables.less
@@ -1,5 +1,6 @@
 // Special
 @colorBrand: #2d78e2;
+@colorFaviconBg: @colorBrand;
 @colorOnline: #008845;
 @colorOk: #008845;
 @colorNotice: #ea8e0b;
