--- a/layout/default/variables.less
+++ b/layout/default/variables.less
@@ -71,7 +71,7 @@
 //Forms
 @sizeCheckbox: 20px;
 @heightInputText: @sizeButton;
-@heightInputTextarea: 65px;
+@maxHeightInputTextarea: 150px;
 @heightSelect: @sizeButton;
 @borderRadiusInput: 3px;
 @colorInputBorder: darken(@colorFgBorderEmphasize3, 5);
