--- a/layout/default/FormField/FileReader/default.less
+++ b/layout/default/FormField/FileReader/default.less
@@ -1,5 +1,37 @@
-.dropInfo {
+&[data-upload-ready] {
+  .button-upload {
+    display: inline-block;
+  }
+}
+
+&[data-upload-process] {
+  .button-select,
+  .button-upload {
+    opacity: .5;
+    pointer-events: none;
+  }
+
+  .previews .preview {
+    .link-remove,
+    .button-remove {
+      display: none;
+    }
+
+    .spinner {
+      display: block;
+    }
+  }
+}
+
+.dropInfo,
+.button-upload {
   display: none;
+}
+
+.button-select {
+  .spinner {
+    display: none;
+  }
 }
 
 &.drag {
@@ -30,19 +62,27 @@
   display: flex;
   flex-wrap: wrap;
 
+  .spinner {
+    background-color: rgba(0, 0, 0, .4);
+    color: white;
+    display: none;
+  }
+
   .preview {
     display: block;
     padding: 3px;
     position: relative;
 
-    &[data-type^="image"] {
-      .preview-inner {
-        position: relative;
-      }
+    .preview-inner {
+      position: relative;
+    }
 
+    &[data-type^="image"] {
       img {
         display: block;
         height: 100px;
+        width: 180px;
+        object-fit: cover;
       }
     }
 
@@ -85,8 +125,8 @@
 
     .button-remove {
       position: absolute;
-      top: 0;
-      right: 0;
+      top: -1px;
+      right: -1px;
     }
   }
 }
@@ -98,10 +138,4 @@ input {
   position: absolute;
   right: 0;
   top: 0;
-}
-
-.button-upload {
-  &.disabled {
-    opacity: .5;
-  }
 }
