Fix textarea size

--- a/layout/default/FormField/Textarea/default.less
+++ b/layout/default/FormField/Textarea/default.less
@@ -1,5 +1,5 @@
 [placeholder]:empty:before {
   color: @colorInputPlaceholder;
   content: attr(placeholder);
-  cursor: text;
+  pointer-events: none;
 }
