--- a/layout/default/FormField/FileReader/default.less
+++ b/layout/default/FormField/FileReader/default.less
@@ -1,30 +1,4 @@
-&[data-upload-ready] {
-  .button-upload {
-    display: inline-block;
-  }
-}
-
-&[data-upload-process] {
-  .button-select,
-  .button-upload {
-    opacity: .5;
-    pointer-events: none;
-  }
-
-  .previews .preview {
-    .link-remove,
-    .button-remove {
-      display: none;
-    }
-
-    .spinner {
-      display: block;
-    }
-  }
-}
-
-.dropInfo,
-.button-upload {
+.dropInfo {
   display: none;
 }
 
