Use ::after instead of :before pseudo element for placeholder (fixed cursor positioning in IE)

--- a/layout/default/FormField/Textarea/default.less
+++ b/layout/default/FormField/Textarea/default.less
@@ -1,4 +1,4 @@
-[placeholder]:empty:before {
+[placeholder]:empty::after {
   color: @colorInputPlaceholder;
   content: attr(placeholder);
   pointer-events: none;
