--- a/layout/default/FormField/Textarea/default.less
+++ b/layout/default/FormField/Textarea/default.less
@@ -1,5 +1,6 @@
-[placeholder]:empty::after {
+[placeholder]:empty::before {
   color: @colorInputPlaceholder;
   content: attr(placeholder);
   pointer-events: none;
+  position: absolute;
 }
