Refactor Example component

--- a/layout/default/Component/Example/tabs/icons.less
+++ b/layout/default/Component/Example/tabs/icons.less
@@ -1,33 +1,12 @@
-.CM_Form_ExampleIcon {
-  @media (min-width: @breakpointSmall) {
-    display: flex;
-  }
-}
-
-.column {
-  box-sizing: border-box;
-  padding: 10px 10px 10px 0;
-
-  &.column-controls {
-    flex-basis: 300px;
-    min-width: 300px;
-  }
-}
-
 .iconBox {
   display: inline-block;
   text-align: center;
   padding: 10px;
   margin: 5px;
-  border: 2px solid transparent;
-  cursor: pointer;
-
-  &.active {
-    border-color: @colorFg;
-  }
 
   .icon {
-    font-size: 25px;
+    height: 24px;
+    margin-bottom: .2em;
   }
 
   .label {
