Introduce function.icon.php smarty helper function - Use it in button, button_link, link smarty functions

--- a/layout/default/css/form.less
+++ b/layout/default/css/form.less
@@ -54,6 +54,7 @@
   font-size: @fontSizeButton;
   height: @sizeButton;
   letter-spacing: 1px;
+  line-height: 1;
   margin: 1px;
   max-width: 100%;
   min-width: @sizeButton;
