--- a/layout/default/css/function.fancySelect.less
+++ b/layout/default/css/function.fancySelect.less
@@ -1,51 +1,50 @@
 .fancySelect {
   display: inline-block;
-  position: relative;
   max-width: 100%;
+  position: relative;
 
   .fancySelect-select {
-    box-sizing: border-box;
-    position: relative;
-    display: inline-block;
-    padding-left: 15px;
-    padding-right: 25px;
-    max-width: 100%;
-    height: @heightSelect;
-    line-height: @heightSelect - 2px;
-    vertical-align: top;
-    border-radius: @borderRadiusInput;
+    align-items: center;
     background-color: @colorInputBg;
     border: 1px solid @colorInputBorder;
+    border-radius: @borderRadiusInput;
+    box-sizing: border-box;
     cursor: pointer;
+    display: inline-flex;
+    height: @heightSelect;
+    justify-content: center;
+    line-height: @heightSelect - 2px;
+    max-width: 100%;
+    padding-left: 15px;
+    padding-right: 7px;
+    position: relative;
+    vertical-align: top;
 
     .labelPrefix {
-      margin-right: 10px;
-      font-size: @fontSizeTiny;
       color: lighten(@colorFgSubtle, 10);
+      font-size: @fontSizeTiny;
+      margin-right: 10px;
     }
 
     .icon {
-      position: absolute;
-      right: 0;
-      width: 25px;
-      text-align: center;
-      color: @colorFgBorderEmphasize3;
-      transition: 200ms;
+      height: 12px;
+      opacity: .3;
+      margin-left: 10px;
     }
   }
 
   select {
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
     .appearance(none);
+    bottom: 0;
     cursor: pointer;
+    left: 0;
+    height: 100%;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+    z-index: 1;
 
     &:not(:disabled) {
       &:focus + .fancySelect-select {
