--- a/layout/default/css/form.less
+++ b/layout/default/css/form.less
@@ -47,14 +47,15 @@
 .placeholder(@colorInputPlaceholder);
 
 .button {
+  align-items: center;
   border-radius: @borderRadiusButton;
   box-sizing: border-box;
   cursor: pointer;
-  display: inline-block;
+  display: inline-flex;
   font-size: @fontSizeButton;
   height: @sizeButton;
+  justify-content: center;
   letter-spacing: 1px;
-  line-height: 1;
   margin: 1px;
   max-width: 100%;
   min-width: @sizeButton;
