Adjust icon occurrences in plugins

--- a/layout/default/css/jquery.floatbox.less
+++ b/layout/default/css/jquery.floatbox.less
@@ -2,14 +2,13 @@
   right: 1px;
   top: 1px;
 
-  .icon-close {
-    display: block;
-    float: right;
-    width: 40px;
-    line-height: 40px;
-    font-size: 18px;
+  .button-close {
+    align-items: center;
     color: @colorFgSubtle;
-    text-align: center;
+    display: inline-flex;
+    height: 40px;
+    justify-content: center;
+    width: 40px;
   }
 }
 
