--- a/client-vendor/after-body/jquery.clickDecorators/decorators/20-confirmed.less
+++ b/client-vendor/after-body/jquery.clickDecorators/decorators/20-confirmed.less
@@ -1,29 +1,106 @@
-[data-click-confirmed]:not(.confirmClick) {
-  .confirmClick-state-active {
-    display: none;
-  }
-}
-
-[data-click-confirmed].confirmClick {
-  .confirmClick-state-inactive {
-    display: none;
-  }
-}
-
 [data-click-confirmed] {
-  .clickConfirmed-bar {
-    box-sizing: border-box;
-    position: absolute;
-    bottom: 4px;
-    left: 5%;
-    width: 90%;
-    height: 2px;
-    transform: scale(1, 1);
-    background-color: rgba(255, 255, 255, .5);
-    transition: transform 3200ms linear 800ms;
+  &:not(.confirmClick) {
+    .confirmClick-state-active {
+      display: none;
+    }
   }
 
-  &.clickConfirmed-active .clickConfirmed-bar {
-    transform: scale(0, 1);
+  &.confirmClick {
+    z-index: 1;
+
+    .confirmClick-state-inactive {
+      display: none;
+    }
+
+    .clickConfirmed-bar {
+      opacity: 1;
+      transform: scale(0, 1);
+      transition: transform 4700ms linear 300ms;
+    }
+
+    &.ready {
+      overflow: visible;
+
+      .clickConfirmed-tooltip {
+        opacity: 1;
+        transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 600ms;
+
+        &.align-left {
+          transform: scale(1);
+        }
+
+        &.align-right {
+          transform: scale(1);
+        }
+
+        &.align-center {
+          transform: translateX(-50%) scale(1);
+        }
+      }
+    }
+  }
+
+  .clickConfirmed-bar {
+    background-color: rgba(255, 255, 255, .3);
+    bottom: 4px;
+    box-sizing: border-box;
+    height: 2px;
+    left: 5%;
+    opacity: 0;
+    position: absolute;
+    transform: scale(1, 1);
+    width: 90%;
+  }
+
+  .clickConfirmed-tooltip {
+    background-color: #444444;
+    border-radius: 5px;
+    bottom: 100%;
+    color: #ffffff;
+    margin-bottom: 3px;
+    min-width: 110px;
+    max-width: 150px;
+    opacity: 0;
+    padding: 4px 7px;
+    position: absolute;
+    transform-origin: bottom center;
+    width: 80%;
+    white-space: normal;
+
+    &.align-left {
+      left: 0;
+      transform: scale(.5);
+
+      &::after {
+        left: 12px;
+      }
+    }
+
+    &.align-right {
+      right: 0;
+      transform: scale(.5);
+
+      &::after {
+        right: 12px;
+      }
+    }
+
+    &.align-center {
+      left: 50%;
+      transform: translateX(-50%) scale(.5);
+
+      &::after {
+        left: 50%;
+        transform: translateX(-50%);
+      }
+    }
+
+    &::after {
+      border: 6px solid transparent;
+      border-top-color: #444444;
+      content: "";
+      position: absolute;
+      top: 100%;
+    }
   }
 }
